# AISecurity

./: .gitignore  AISecurity.entitlements  CLAUDE.md  LICENSE  Package.swift  README.md  benchmark.swift  build-rust.sh  config.toml.example  install.sh  uninstall.sh
.github/workflows/: ci.yml
CSecurityCore/: module.modulemap
CSecurityCore/include/: security_core.h
SecurityCore/: Cargo.toml  README.md  deny.toml
SecurityCore/crates/ai-exec/: Cargo.toml
SecurityCore/crates/ai-exec/src/: main.rs
SecurityCore/crates/aisec-mcp/: Cargo.toml  aisec
SecurityCore/crates/aisec-mcp/src/: main.rs
SecurityCore/crates/intent-hook/: Cargo.toml
SecurityCore/crates/intent-hook/src/: main.rs
SecurityCore/crates/privacy-router/: Cargo.toml
SecurityCore/crates/privacy-router/src/: main.rs
SecurityCore/crates/security-core/: Cargo.toml
SecurityCore/crates/security-core-ffi/: Cargo.toml  cbindgen.toml
SecurityCore/crates/security-core-ffi/src/: lib.rs
SecurityCore/crates/security-core/src/: agent_policy.rs  alert.rs  bypass.rs  command_policy.rs  config.rs  email_patterns.rs  encryption.rs  file_sanitizer.rs  intent_verifier.rs  key_filter.rs  lib.rs  local_services.rs  message_patterns.rs  model_verifier.rs  model_vetting.rs  package_vulns.rs  path_resolver.rs  policy_audit.rs  privacy_router.rs  process_manager.rs  prompt_injection.rs  sender_whitelist.rs  sensitive_data.rs  severity.rs  threat_feeds.rs  threat_intent_parser.rs  tls_transport.rs  vault.rs  wasm_sandbox.rs
SecurityCore/crates/security-core/tests/: cross_validation.rs
SecurityCore/crates/security-core/tests/integration/: test_cases.json
SecurityCore/crates/security-linux/: Cargo.toml
SecurityCore/crates/security-linux/src/: auth.rs  clipboard.rs  email_scanner.rs  file_watcher.rs  logger.rs  main.rs  message_scanner.rs  notifications.rs  tui.rs  tui_file_browser.rs
SecurityCore/crates/security-linux/src/ext_notifications/: config.rs  discord.rs  email.rs  mod.rs  telegram.rs
Sources/AISecurity/: AISecurityApp.swift  AppIcon.icns  Info.plist
Sources/AISecurity/Config/: PathResolver.swift  SecurityConfig.swift
Sources/AISecurity/Core/: CodeSignatureGuard.swift  MasterKey.swift  PathGuard.swift  PortableVaultExport.swift  SecurityDaemon.swift  SecurityLogger.swift  SenderWhitelist.swift  SeverityLevel.swift
Sources/AISecurity/Modules/: DependencyDriftWatcher.swift  EmailScanner.swift  ExternalFileSanitizer.swift  FileWatcher.swift  MessagesScanner.swift  ModelDirectoryWatcher.swift  PersistencePathWatcher.swift  ProcessMonitor.swift  PromptInjectionGuard.swift  PythonPthWatcher.swift  SelfProtection.swift  SenderHistory.swift  SensitiveDataDetector.swift  TCCMonitor.swift  ThreatIntentParser.swift
Sources/AISecurity/Notifications/: DiscordChannel.swift  EmailChannel.swift  NotificationConfig.swift  NotificationManager.swift  NotificationSetupDialog.swift  TelegramChannel.swift
Sources/AISecurity/Resources/: vault-decrypt.py
Sources/AISecurity/RustBridge/: SecurityCoreBridge.swift
Sources/AISecurity/Vault/: AuthGate.swift  FinderTags.swift  TemporaryDecryptMonitor.swift  VaultAuditLog.swift  VaultDialogs.swift  VaultFileTracker.swift  VaultManager.swift  VaultProgressWindow.swift  VaultTrackingManifest.swift  VaultWindowView.swift
deploy/linux/: install.sh  security-core.service
docs/: AISECIMPLEMENTATION.md  ASSESSMENT.md  NemoImprovement.md
