[package]
name = "aisec-mcp"
version = "0.1.0"
edition = "2021"
description = "MCP (Model Context Protocol) server — exposes AISecurity's intent_verifier and privacy_router as MCP tools. Relays to the SecurityDaemon on 127.0.0.1:7459."

[[bin]]
name = "aisec-mcp"
path = "src/main.rs"

[dependencies]
security-core = { path = "../security-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
