[package]
name = "security-core"
version = "0.1.0"
edition = "2021"
description = "Cross-platform security detection core — pattern matching, scoring, and analysis"

[dependencies]
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1"
toml = "0.8"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
aes-gcm = "0.10"
rand = "0.8"
wasmtime = "18"
rustls = "0.23"
webpki-roots = "0.26"
