[package]
name = "security-core"
version = "0.1.0"
edition = "2021"
description = "Cross-platform security detection core — pattern matching, scoring, and analysis"

[dependencies]
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.20"
toml = "0.8"
sha2 = "0.10"
pbkdf2 = "0.12"
hmac = "0.12"
chrono = { version = "0.4", features = ["serde"] }
aes-gcm = "0.10"
rand = "0.8"
wasmtime = "18"
rustls = "0.23"
webpki-roots = "0.26"
