[package]
name = "security-linux"
version = "0.1.0"
edition = "2021"
description = "Linux security daemon — inotify, Thunderbird, Signal, clipboard, notifications"

[[bin]]
name = "security-linux"
path = "src/main.rs"

[dependencies]
security-core = { path = "../security-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
inotify = "0.10"
mailparse = "0.15"
rusqlite = { version = "0.32", features = ["bundled"] }
arboard = "3"
notify-rust = "4"
ctrlc = "3"
walkdir = "2"
sha2 = "0.10"
log = "0.4"
env_logger = "0.11"
ratatui = "0.28"
crossterm = "0.28"
pam = "0.8"
reqwest = { version = "0.12", features = ["json", "blocking"] }
lettre = { version = "0.11", features = ["smtp-transport", "builder", "tokio1-native-tls"] }
ksni = "0.2"
